--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ youtube_dl
 colorlog
 cffi --only-binary all; sys_platform == 'win32'
 moviepy==0.2.3.2
-requests
+requests>=2.20.0
 aiohttp
 aiofiles
